# dioxus-plumb

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  justfile  package-lock.json  package.json  tailwind.css
.github/workflows/: dioxus.yml
assets/: tailwind.css
src/: components.rs  connectable.rs  dot_renderer.rs  edge_renderer.rs  graph_data.rs  lib.rs  main.rs  node_renderer.rs  perfect_arrows.rs  rankdir.rs
src/components/: canvas.rs  edge_renderer.rs  graph.rs
src/examples/: dashboard.rs  dot_repl.rs  edge_arena.rs  mod.rs  plog.rs  plog_manual.rs  workflow.rs
src/perfect_arrows/: utils.rs
