[package]
name = "dioxus-plumb"
version = "0.1.0"
authors = ["Doug Anderson444 <douganderson444@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = [] }
web-sys = { version = "0.3.77", features = [
  "Document",
  "Element",
  "Window",
  "DomRect",
  "EventTarget",
  "MutationObserver",
  "MutationObserverInit",
] }
wasm-bindgen = "0.2.100"
gloo-timers = { version = "0.3", features = ["futures"] }
dot-parser = "0.5.1"

serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
# Quadtree implementation for Rect collision avoidance
quadtree_rs = "0.1.3"

[dependencies.dioxus-sdk]
version = "0.6"
features = ["storage"]
optional = true

[features]
default = ["web", "serde"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
serde = ["dep:serde", "dep:serde_json", "dioxus-sdk/storage"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
